--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -31,10 +31,10 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a>Genres</a>
 						<ul>
-							<li><a href="genre.html">Action</a></li>
-							<li><a href="genre.html">Comedy</a></li>
-							<li><a href="genre.html">Drama</a></li>
-							<li><a href="genre.html">Romance</a></li>
+							<li><a href="{% url 'movies:movie_category' 'action' %}">Action</a></li>
+							<li><a href="{% url 'movies:movie_category' 'comedy' %}">Comedy</a></li>
+							<li><a href="{% url 'movies:movie_category' 'drama' %}">Drama</a></li>
+							<li><a href="{% url 'movies:movie_category' 'romance' %}">Romance</a></li>
 						</ul>
 					</li>
 					<li><a>Year</a>
@@ -47,21 +47,20 @@
 					</li>
 					<li><a>Language</a>
 						<ul>
-							<li><a href="language.html">English</a></li>
-							<li><a href="language.html">German</a></li>
+							<li><a href="{% url 'movies:movie_language' 'english' %}">English</a></li>
+							<li><a href="{% url 'movies:movie_language' 'german' %}">German</a></li>
 						</ul>
 					</li>
-					<li><a href="mostwatched.html">Most Watched</a></li>
 					<li class="mobsearch">
-						<form class="mobform">
-							<input type="text" name="s" class="mobsearchfield" placeholder="Search...">
+						<form class="mobform" method="GET">
+							<input type="text" name="q" value = "{{request.GET.q}}" class="mobsearchfield" placeholder="Search...">
 							<input type="submit" value="" class="mobsearchsubmit">
 						</form>
 					</li>
 				</ul>
 			</nav>
-			<form class="search">
-				<input type="text" name="s" class="searchfield" placeholder="Search...">
+			<form class="search" method="GET" action= "{% url 'movies:movie_search' %}">
+				<input type="text" name="query" value = "{{request.GET.q}}" class="searchfield" placeholder="Search...">
 				<input type="submit" value="" class="searchsubmit">
 			</form>
 
